finished w01 code along activity

--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -16,8 +16,7 @@
         right in the heart of Rome, attracting visitors from all over the world who want to see St. Peter’s Basilica and
         the
         Sistine Chapel. </p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Engelsburg_und_Engelsbr%C3%BCcke_abends_%28Zuschnitt%29.jpg/120px-Engelsburg_und_Engelsbr%C3%BCcke_abends_%28Zuschnitt%29.jpg"
-        alt="Castel Sant'Angelo">
+    <img src="images/rome.jpg" alt="Trevi Fountain">
 </body>
 
 </html>
