--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title> Paola Jarquin Cervantes| WDD 130 </title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Paola Jarquin Cervantes | WDD 130 </h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Paola Jarquin" width="200">
+        <p>Hello, my name is Paola Jarquin, I'm 21 years old and I'm from Oaxaca, Mexico.
+            I feel very happy thanks to the gospel of Jesus Christ. I belong to The Church of Jesus Christ of Latter-day
+            Saints
+            and I had the blessing to serve in the Mexico Monterrey East Mission. I am currently studying Web
+            Development, and in my
+            free time I enjoy being with my two dogs. My favorite foods are sushi and lasagna.
+        </p>
+    </main>
+    <footer>
+        <p>©️2025 🌺Paola Jarquin Cervantes🌺 Oaxaca, Mexico</p>
+    </footer>
 </body>
+
 </html>
