finished home page week 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Paola Jarquin Cervantes| WDD 130 </title>
+    <meta name="description" content="My home page for the WDD 130 course">
+    <meta name="author" content="Paola Jarquin Cervantes">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -26,6 +28,12 @@
             free time I enjoy being with my two dogs. My favorite foods are sushi and lasagna.
         </p>
     </main>
+    <aside>
+        <h2>Oaxaca, Mexico</h2>
+        <img src="images/oaxaca.jpg" alt="Oaxaca, Mexico">
+        <p>Oaxaca is a culturally rich Mexican state known for its vibrant indigenous heritage, historic colonial city,
+            exquisite cuisine, and unique artisan traditions.</p>
+    </aside>
     <footer>
         <p>©️2025 🌺Paola Jarquin Cervantes🌺 Oaxaca, Mexico</p>
     </footer>
