finished w03 code along activity

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="My home page for the WDD 130 course">
     <meta name="author" content="Paola Jarquin Cervantes">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,20 +18,41 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">Linkedln</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Paola Jarquin Cervantes | WDD 130 </h1>
         <img src="images/profile.jpg" alt="Hello, my name is Paola Jarquin" width="200">
-        <p>Hello, my name is Paola Jarquin, I'm 21 years old and I'm from Oaxaca, Mexico.
-            I feel very happy thanks to the gospel of Jesus Christ. I belong to The Church of Jesus Christ of Latter-day
-            Saints
-            and I had the blessing to serve in the Mexico Monterrey East Mission. I am currently studying Web
-            Development, and in my
-            free time I enjoy being with my two dogs. My favorite foods are sushi and lasagna.
-        </p>
+        <p class="description">Hello, my name is Paola Jarquin, I am 21 years old and from Oaxaca, Mexico. I feel very
+            grateful for the gospel of Jesus Christ, which gives me happiness and purpose every day. I belong to The
+            Church of Jesus Christ of Latter-day
+            Saints and had the blessing of serving as a missionary in the Mexico Monterrey East Mission, an experience
+            that
+            strengthened my faith and taught me to love and serve others. I am currently studying Web Development
+            because I enjoy
+            creativity and technology, and I hope to use these skills to build meaningful projects in the future. In my
+            free time, I
+            love spending time with my two playful dogs, and I also enjoy good food, especially sushi and lasagna, which
+            are my
+            absolute favorites.</p>
+
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?"
+                    target="_blank">San
+                    Diego
+                    Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/rome-italy-temple?" target="_blank">Rome
+                    Italy
+                    Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?"
+                    target="_blank">Idaho
+                    Falls
+                    Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Oaxaca, Mexico</h2>
         <img src="images/oaxaca.jpg" alt="Oaxaca, Mexico">
         <p>Oaxaca is a culturally rich Mexican state known for its vibrant indigenous heritage, historic colonial city,
