--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Site</title>
+    <title>About Us-Rafting Site</title>
     <meta name="description"
         content="Experience the thrill of whitewater rafting with expert guides, breathtaking river views, and adventures for every skill level. Book your unforgettable rafting trip today!">
-    <meta name="author" content="Paola Jarquin Cervantes">
+    <meta name="author" content="Paola Jarquin">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
