--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="/wwr/images/logo.png" alt="Logo" width="200">
+        <img src="/wwr/images/logo.png" alt="Rapid Riders Logo" width="200">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,10 +25,10 @@
     </header>
     <main>
         <div class="hero">
-            <img src="/wwr/images/background.jpg" alt=" People rafting">
+            <img src="images/background.jpg" alt=" People rafting">
             <h1>Rapid Riders Rafting Company</h1>
             <article>
-                <img src="/wwr/images/happy_client.jpg" alt="Happy client" height="300">
+                <img src="images/happy_client.jpg" alt="Happy client" height="300">
                 <p>At Rapid Riders, we are passionate about adventure, nature, and creating unforgettable experiences on
                     the river. Our
                     expert guides combine safety, fun, and excitement to give every rider from first-timers to
@@ -56,10 +56,9 @@
     <footer>
         <p>©️2025 |💦🛶Rapid Riders🛶💦 | Paola Jarquin Cervantes</p>
         <nav class="socialmedia">
-            <a href="https://www.facebook.com/"><img src="/wwr/images/facebook.png" alt="Facebook Icon" height="80"></a>
-            <a href="https://www.instagram.com/"><img src="/wwr/images/instagram.png" alt="Instagram Icon"
-                    height="80"></a>
-            <a href="https://www.youtube.com/"><img src="/wwr/images/youtube.png" alt="Youtube Icon" height="80"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook Icon" height="80"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram Icon" height="80"></a>
+            <a href="https://www.youtube.com/"><img src="images/youtube.png" alt="Youtube Icon" height="80"></a>
         </nav>
     </footer>
 </body>
