--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="logo" alt="Rapid Riders Logo" width="200">
+        <img src="images/logo.png" alt="Rapid Riders Logo" width="200">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="background" alt=" People rafting">
+            <img src="images/background.jpg" alt=" People rafting">
             <h1>Rapid Riders Rafting Company</h1>
             <article>
                 <img src="happyclient" alt="Happy client" height="300">
@@ -56,9 +56,9 @@
     <footer>
         <p>©️2025 |💦🛶Rapid Riders🛶💦 | Paola Jarquin Cervantes</p>
         <nav class="socialmedia">
-            <a href="https://www.facebook.com/"><img src="face" alt="Facebook Icon" height="80"></a>
-            <a href="https://www.instagram.com/"><img src="insta" alt="Instagram Icon" height="80"></a>
-            <a href="https://www.youtube.com/"><img src="youtube" alt="Youtube Icon" height="80"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook Icon" height="80"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram Icon" height="80"></a>
+            <a href="https://www.youtube.com/"><img src="images/youtube.png" alt="Youtube Icon" height="80"></a>
         </nav>
     </footer>
 </body>
