--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,7 @@
             <img src="images/background.jpg" alt=" People rafting">
             <h1>Rapid Riders Rafting Company</h1>
             <article>
-                <img src="happyclient" alt="Happy client" height="300">
+                <img src="images/happy_client.jpg" alt="Happy client" height="300">
                 <p>At Rapid Riders, we are passionate about adventure, nature, and creating unforgettable experiences on
                     the river. Our
                     expert guides combine safety, fun, and excitement to give every rider from first-timers to
