--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <title>About Us-Rafting Site</title>
     <meta name="description"
         content="Experience the thrill of whitewater rafting with expert guides, breathtaking river views, and adventures for every skill level. Book your unforgettable rafting trip today!">
-    <meta name="author" content="Paola Jarquin">
+    <meta name="author" content="Paola Jarquin Cervantes">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
