finished W04 code along activity

--- a/index.html
+++ b/index.html
@@ -22,42 +22,58 @@
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Paola Jarquin Cervantes | WDD 130 </h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Paola Jarquin" width="200">
-        <p class="description">Hello, my name is Paola Jarquin, I am 21 years old and from Oaxaca, Mexico. I feel very
-            grateful for the gospel of Jesus Christ, which gives me happiness and purpose every day. I belong to The
-            Church of Jesus Christ of Latter-day
-            Saints and had the blessing of serving as a missionary in the Mexico Monterrey East Mission, an experience
-            that
-            strengthened my faith and taught me to love and serve others. I am currently studying Web Development
-            because I enjoy
-            creativity and technology, and I hope to use these skills to build meaningful projects in the future. In my
-            free time, I
-            love spending time with my two playful dogs, and I also enjoy good food, especially sushi and lasagna, which
-            are my
-            absolute favorites.</p>
+    <div class="grid">
+        <main>
+            <h1>Paola Jarquin Cervantes | WDD 130 </h1>
+            <img src="images/profile.jpg" alt="Hello, my name is Paola Jarquin" width="200">
+            <p class="description">Hello, my name is Paola Jarquin, I am 21 years old and from Oaxaca, Mexico. I feel
+                very
+                grateful for the gospel of Jesus Christ, which gives me happiness and purpose every day. I belong to The
+                Church of Jesus Christ of Latter-day
+                Saints and had the blessing of serving as a missionary in the Mexico Monterrey East Mission, an
+                experience
+                that
+                strengthened my faith and taught me to love and serve others. I am currently studying Web Development
+                because I enjoy
+                creativity and technology, and I hope to use these skills to build meaningful projects in the future. In
+                my
+                free time, I
+                love spending time with my two playful dogs, and I also enjoy good food, especially sushi and lasagna,
+                which
+                are my
+                absolute favorites.</p>
 
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?"
-                    target="_blank">San
-                    Diego
-                    Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/rome-italy-temple?" target="_blank">Rome
-                    Italy
-                    Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?"
-                    target="_blank">Idaho
-                    Falls
-                    Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Oaxaca, Mexico</h2>
-        <img src="images/oaxaca.jpg" alt="Oaxaca, Mexico">
-        <p>Oaxaca is a culturally rich Mexican state known for its vibrant indigenous heritage, historic colonial city,
-            exquisite cuisine, and unique artisan traditions.</p>
-    </aside>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?"
+                        target="_blank">San
+                        Diego
+                        Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/rome-italy-temple?"
+                        target="_blank">Rome
+                        Italy
+                        Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?"
+                        target="_blank">Idaho
+                        Falls
+                        Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Oaxaca, Mexico</h2>
+            <img src="images/oaxaca.jpg" alt="Oaxaca, Mexico">
+            <p>Oaxaca is a vibrant city in southern Mexico known for its rich culture, colorful traditions, and warm,
+                welcoming people.
+                The city is famous for its delicious food: especially mole, tlayudas, and chocolate, as
+                well
+                as its lively
+                festivals like Guelaguetza, where music, dance, and traditional clothing fill the streets. Local markets
+                overflow with
+                handmade crafts, textiles, and pottery created by skilled artisans from nearby villages. Every corner of
+                Oaxaca tells a
+                story of its deep indigenous roots and artistic spirit, making it one of the most magical places in
+                Mexico.</p>
+        </aside>
+    </div>
     <footer>
         <p>©️2025 🌺Paola Jarquin Cervantes🌺 Oaxaca, Mexico</p>
     </footer>
