--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
     <header>
         <img src="images/logo.png" alt="Rapid Riders Logo" width="200">
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -41,16 +41,49 @@
         </div>
         <section>
             <h2>History</h2>
-            <p>Rapid Riders began with a simple vision: to share the beauty and excitement of whitewater rafting with
-                everyone. What
-                started as a small group of rafting enthusiasts has grown into a trusted adventure company, welcoming
-                countless guests
-                to explore the rivers with us. Over the years, our dedication to safety, quality, and genuine adventure
-                has built a
-                reputation that keeps riders coming back for more.</p>
+            <div class="history">
+                <p>Rapid Riders began with a simple vision: to share the beauty and excitement of whitewater rafting
+                    with
+                    everyone. Over the years, our dedication to safety, quality, and genuine
+                    adventure
+                    has built a
+                    reputation that keeps riders coming back for more.</p>
+                <img src="images/history.jpg" alt="Happy group" width="200px">
+                <p>
+                    From our early days navigating local rapids with borrowed gear to becoming one of the most
+                    recognized rafting companies
+                    in the region. As
+                    we continue to grow,
+                    our mission remains the same: to create unforgettable river experiences that connect people with
+                    nature and with each
+                    other.
+                </p>
+            </div>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <div class="adventure">
+                <figure>
+                    <img src="images/frost_vein.jpg" alt="Frost Vein">
+                    <figcaption>Frost Vein</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/wild_surge.jpg" alt="Wild Surge">
+                    <figcaption>Wild Surge</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/waterfall_rapids.jpg" alt="Waterfall Rapids">
+                    <figcaption>Waterfall Rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/mckenzie_river.jpg" alt="Mckenzie River">
+                    <figcaption>Mckenzie River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/mountain_rush.jpg" alt="Mountain Rush">
+                    <figcaption>Mountain Rush</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
