--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,7 +48,7 @@
                     adventure
                     has built a
                     reputation that keeps riders coming back for more.</p>
-                <img src="images/history.jpg" alt="Happy group" width="200px">
+                <img src="images/history.jpg" alt="Happy group" width="200">
                 <p>
                     From our early days navigating local rapids with borrowed gear to becoming one of the most
                     recognized rafting companies
