--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="images/" alt="Rapid Riders Logo" width="200">
+        <img src="images/logo.png" alt="Rapid Riders Logo" width="200">
         <nav>
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
