--- a/week05/quiz.html
+++ b/week05/quiz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz | Paola Jarquin</title>
-    <link rel="stylesheet" href="/week05/styles/quiz.css">
+    <link rel="stylesheet" href="styles/quiz.css">
 </head>
 
 <body>
