finished home page

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us-Rafting Site</title>
+    <title>Our Trips-Rafting Site</title>
     <meta name="description"
-        content="Experience the thrill of whitewater rafting with expert guides, breathtaking river views, and adventures for every skill level. Book your unforgettable rafting trip today!">
+        content="Explore our thrilling rafting trips designed for all adventure levels! From calm family floats to intense whitewater runs, Rapid Riders has the perfect river experience waiting for you.">
     <meta name="author" content="Paola Jarquin Cervantes">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -87,7 +87,7 @@
         </section>
     </main>
     <footer>
-        <p>©️2025 | Rapid Riders | Paola Jarquin </p>
+        <p>©️2025 | Rapid Riders | Paola Jarquin</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook Icon" height="80"></a>
             <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram Icon" height="80"></a>
