--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,66 +24,92 @@
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <img src="images/background.jpg" alt=" People rafting">
-            <h1>Rapid Riders Rafting Company</h1>
-            <article>
-                <img src="images/happy_client.jpg" alt="Happy client" height="300">
-                <p>At Rapid Riders, we are passionate about adventure, nature, and creating unforgettable experiences on
-                    the river. Our
-                    expert guides combine safety, fun, and excitement to give every rider from first-timers to
-                    thrill-seekers a journey to
-                    remember. More than just rafting, we provide a chance to connect with the outdoors, build lasting
-                    memories, and feel the
-                    rush of conquering the rapids together.
-                </p>
-            </article>
-        </div>
-        <section>
-            <h2>History</h2>
-            <div class="history">
-                <p>Rapid Riders began with a simple vision: to share the beauty and excitement of whitewater rafting
-                    with
-                    everyone. Over the years, our dedication to safety, quality, and genuine
-                    adventure
-                    has built a
-                    reputation that keeps riders coming back for more.</p>
-                <img src="images/history.jpg" alt="Happy group" width="200">
-                <p>
-                    From our early days navigating local rapids with borrowed gear to becoming one of the most
-                    recognized rafting companies
-                    in the region. As
-                    we continue to grow,
-                    our mission remains the same: to create unforgettable river experiences that connect people with
-                    nature and with each
-                    other.
-                </p>
+        <section class="cta">
+            <h2>Need help planning your trip?</h2>
+            <p>We’d love to help you design the perfect river adventure!<br>
+                Whether you’re booking for a family, group, or solo expedition, our team is here<br>
+                to answer all your questions and get you ready for the ride.</p>
+            <a href="contact.html" class="btn">Contact Us Today</a>
+        </section>
+        <section class="Discover">
+            <h2>Our Trips</h2>
+            <div class="trips">
+                <div class="grid">
+                    <img src="images/trip1.jpg" alt="Family Float Adventure">
+                    <h3>Family Float Adventure</h3>
+                    <h4>Perfect for beginners and families with kids</h4>
+                    <p>Enjoy a relaxing day on calm waters surrounded by scenic views and gentle waves. Our certified
+                        guides make sure everyone
+                        stays safe while having fun.<br>
+                        📍 River: Crystal Creek<br>
+                        ⏱ Duration: Half-day<br>
+                        💧 Difficulty: Class I–II</p>
+                </div>
+                <div class="grid">
+                    <img src="images/trip2.jpg" alt="People Rafting">
+                    <h3>Canyon Rapids Challenge</h3>
+                    <h4>Our most popular thrill ride!</h4>
+                    <p>Tackle a mix of moderate and fast-flowing rapids as you descend through breathtaking canyon
+                        walls. This trip blends
+                        excitement with nature’s beauty.<br>
+                        📍 River: Eagle Canyon<br>
+                        ⏱ Duration: Full-day<br>
+                        💧 Difficulty: Class III–IV</p>
+                    </p>
+                </div>
+                <div class="grid">
+                    <img src="images/trip3.jpg" alt="People Rafting">
+                    <h3>Extreme Wildwater Expedition</h3>
+                    <h4>For true adrenaline seekers!</h4>
+                    <p>Push your limits on an intense course of roaring Class V rapids. Led by elite guides, this
+                        adventure delivers nonstop
+                        action and a serious adrenaline rush.<br>
+                        📍 River: Thunder Run<br>
+                        ⏱ Duration: 2 days<br>
+                        💧 Difficulty: Class IV–V</p>
+                    </p>
+                </div>
             </div>
         </section>
-        <section>
-            <h2>Adventure Awaits You!</h2>
-            <div class="adventure">
-                <figure>
-                    <img src="images/frost_vein.jpg" alt="Frost Vein">
-                    <figcaption>Frost Vein</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/wild_surge.jpg" alt="Wild Surge">
-                    <figcaption>Wild Surge</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/waterfall_rapids.jpg" alt="Waterfall Rapids">
-                    <figcaption>Waterfall Rapids</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/mckenzie_river.jpg" alt="Mckenzie River">
-                    <figcaption>Mckenzie River</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/mountain_rush.jpg" alt="Mountain Rush">
-                    <figcaption>Mountain Rush</figcaption>
-                </figure>
-            </div>
+        <section class="table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Trip Name</th>
+                        <th>River</th>
+                        <th>Duration</th>
+                        <th>Difficulty</th>
+                        <th>Price (USD)</th>
+                        <th>Age Limit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Family Float Adventure</td>
+                        <td>Crystal Creek</td>
+                        <td>Half-day</td>
+                        <td>Class I–II</td>
+                        <td>$75</td>
+                        <td>6+</td>
+                    </tr>
+                    <tr>
+                        <td>Canyon Rapids Challenge</td>
+                        <td>Eagle Canyon</td>
+                        <td>Full-day</td>
+                        <td>Class III–IV</td>
+                        <td>$120</td>
+                        <td>12+</td>
+                    </tr>
+                    <tr>
+                        <td>Extreme Wildwater Expedition</td>
+                        <td>Thunder Run</td>
+                        <td>2 days</td>
+                        <td>Class IV–V</td>
+                        <td>$240</td>
+                        <td>16+</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
     <footer>
