--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -55,7 +55,6 @@
                         📍 River: Eagle Canyon<br>
                         ⏱ Duration: Full-day<br>
                         💧 Difficulty: Class III–IV</p>
-                    </p>
                 </div>
                 <div class="grid">
                     <img src="images/trip3.jpg" alt="People Rafting">
@@ -67,11 +66,12 @@
                         📍 River: Thunder Run<br>
                         ⏱ Duration: 2 days<br>
                         💧 Difficulty: Class IV–V</p>
-                    </p>
                 </div>
             </div>
         </section>
         <section class="table">
+            <h2>Our Prices</h2>
+            <p> </p>
             <table>
                 <thead>
                     <tr>
